@@ -66,6 +66,8 @@
     name= _ "Bridge"
     string=^Bw|
     aliasof=_bas, Gt
+    submerge=0
+    unit_height_adjust=22
     editor_group=bridge, water
 [/terrain_type]
 
@@ -76,6 +78,8 @@
     string=^Bw/
     aliasof=_bas, Gt
     editor_group=bridge, water
+    submerge=0
+    unit_height_adjust=22
 [/terrain_type]
 
 [terrain_type]
@@ -85,6 +89,8 @@
     string=^Bw\
     aliasof=_bas, Gt
     editor_group=bridge, water
+    submerge=0
+    unit_height_adjust=22
 [/terrain_type]
 
 #  >>>>>>>> Chasm Bridge
