@@ -4,6 +4,7 @@ Version 1.7.13+svn:
  * Graphics:
    * Fixed bug 15344: missing ice to nothing transition
    * Fixed weird side effect of long first frame in standing anims
+   * Fix bug 15366 : overlay terrains badly interacting with submerge and height adjustments
  * Language and i18n:
    * Updated translations: Czech, Italian, Polish
  * Multiplayer
